--- a/k8s.yaml
+++ b/k8s.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: client-worker-service
+  namespace: development
 spec:
   type: LoadBalancer
   ports:
@@ -14,6 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: client-worker
+  namespace: development
 spec:
   replicas: 7
   strategy:
