--- a/k8s.yaml
+++ b/k8s.yaml
@@ -59,7 +59,12 @@ spec:
                   name: app-config
                   key: logstash-host
           securityContext:
+            privileged: false
             readOnlyRootFilesystem: true
+            allowPrivilegeEscalation: false
+          allowedHostPaths:
+            - pathPrefix: "/tmp/healthy"
+              readOnly: false
           ports:
             - containerPort: 8000
           args:
@@ -67,16 +72,14 @@ spec:
             - -c
             - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
           livenessProbe:
-            exec:
-              command:
-                - cat
-                - /tmp/healthy
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 1
             initialDelaySeconds: 30
-            periodSeconds: 5
           readinessProbe:
-            exec:
-              command:
-                - cat
-                - /tmp/healthy
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 1
             initialDelaySeconds: 30
-            periodSeconds: 5
