--- a/k8s.yaml
+++ b/k8s.yaml
@@ -58,17 +58,18 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: logstash-host
-          securityContext:
-            privileged: false
-            readOnlyRootFilesystem: true
-            allowPrivilegeEscalation: false
           ports:
             - name: ws-port
               containerPort: 8000
               hostPort: 8000
+          args:
+            - /bin/sh
+            - -c
+            - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
           livenessProbe:
-            httpGet:
-              path: /
-              port: 8000
-            initialDelaySeconds: 30
+            exec:
+              command:
+                - cat
+                - /tmp/healthy
+            initialDelaySeconds: 5
             periodSeconds: 5
