--- a/k8s.yaml
+++ b/k8s.yaml
@@ -35,11 +35,11 @@ metadata:
   name: client-worker-service
   namespace: development
 spec:
-  type: ClusterIP
   ports:
-  - name: tcp-socket
-    port: 8000
-    targetPort: 8000
+    - name: tcp-port
+      protocol: TCP
+      port: 8000
+      targetPort: 8000
   selector:
     app: client-worker
 ---
