--- a/k8s.yaml
+++ b/k8s.yaml
@@ -64,7 +64,7 @@ spec:
         app: client-worker
     spec:
       nodeSelector:
-        dedicated: deamond
+        dedicated: spot
       containers:
         - name: client-worker
           image: CONTAINER_IMAGE
