--- a/k8s.yaml
+++ b/k8s.yaml
@@ -69,6 +69,8 @@ spec:
         - name: client-worker
           image: CONTAINER_IMAGE
           imagePullPolicy: Always
+          imagePullSecrets:
+          - name: regcred
           resources:
             requests:
               memory: "150M"
